--- a/package.json
+++ b/package.json
@@ -10,8 +10,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-navigation/bottom-tabs": "^6.5.19",
+    "@react-navigation/native": "^6.1.16",
+    "@react-navigation/native-stack": "^6.9.25",
+    "@react-navigation/stack": "^6.3.28",
+    "@types/d3-shape": "^3.1.6",
+    "d3-shape": "^3.2.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-date-picker": "^4.4.1",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-modal-datetime-picker": "^17.1.0",
+    "react-native-modal-selector": "^2.1.2",
+    "react-native-picker": "^4.3.7",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-redash": "^18.1.3",
+    "react-native-safe-area": "^0.5.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-svg": "^15.1.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
